fixed table overflow on mobile

--- a/src/app/company-followers/company-followers.component.css
+++ b/src/app/company-followers/company-followers.component.css
@@ -1,5 +1,6 @@
 .small-table {
   overflow: scroll !important;
+  max-height: 500px;
 }
 
 .full-width-table {
